# wexplorer

./: Cargo.toml  README.md
snap/: snapcraft.yaml
src/: main.rs
src/core/: app.rs  file_info.rs  mod.rs  virtual_directory.rs
src/dialogs/: main.rs  mod.rs
src/integration/: mod.rs
src/style/: mod.rs  ribbon_style.rs
src/widgets/: mod.rs  ribbon_widget.rs
